<resources>
    <string name="app_name">smoothie</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    //for landing page
    <string name="landing">Squeeze Out That CREATIVE Juice !</string>
    <string name="squeeze">Squeeze</string>
    //for login page
    <string name="login">Login</string>
    <string name="loginEmail">Enter your email</string>
    <string name="loginPassword">Enter your password</string>
    <string name="iDontHaveAnAccount">I don\'t have an account</string>
    //for user register page
    <string name="createUser">"Create User "</string>
    <string name="userName">Enter your name</string>
    <string name="userContact">Enter your phone number</string>
    <string name="userEmail">Enter your Email</string>
    <string name="userPassword">Password</string>
    <string name="create">Create</string>
</resources>